# Rustaceans_Guide_to_the_Galaxy

./: README.md
Termux_guide/: README.md
cargo_mobile2_guide/: README.md
egui_android_keyboard/: Cargo.toml  README.md
egui_android_keyboard/src/: keypad.rs  lib.rs  main.rs
egui_example/: Cargo.toml  README.md
egui_example/src/: lib.rs  main.rs
prerequisits/: prerequisites.md
